# cpp-python_interop_experiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py
src/: main.cpp  test.cpp
